--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "better-sqlite3": "^9.5.0",
+    "@aws-sdk/client-s3": "^3.465.0",
+    "better-sqlite3": "^9.1.1",
     "next": "14.0.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "slugify": "^1.6.6",
+    "xss": "^1.0.14"
   },
   "devDependencies": {
     "eslint": "^8",
